@@ -1,3 +1,8 @@
+2007-05-19  Joel Brobecker  <brobecker@adacore.com>
+
+	* rs6000-nat.c (xcoff_relocate_symtab): Do nothing if debugging
+	a core file. Add comment in the function description.
+
 2007-05-18  Caroline Tice  <ctice@apple.com>
 
 	* c-valprint.c (c_value_print):  If the initialized field of the
